fail to fix collapse bug

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,34 @@
-.index-title {
-  font-size: 100px;
+body {
+	font-family: "Lato", "Roboto Mono", "sans-serif";
+    img{
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
 }
+
+.andy-email{
+    font-size: 14px;
+    color: #6C757D;
+}
+
+.nav {
+	position: fixed;
+	min-width: 200px;
+	min-height: 100vh;
+}
+
+
+
+table {
+	width: 100%;
+}
+
+.emir{
+    width: 141px;
+    height: 141px;
+}
+
+
+
+
